--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "@babel/preset-env": "^7.17.10",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@svgr/webpack": "^6.2.1",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
     "@types/styled-components": "^5.1.25",
     "babel-loader": "^8.2.5",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "svg-url-loader": "^7.1.1",
     "typescript": "^4.6.4",
+    "url-loader": "^4.1.1",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.9.0"
